# pymod2pkg

./: .gitignore  .gitreview  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  Makefile  README.md  README.rst  lower-constraints.txt  pymod2pkg.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tests.py  tox.ini
doc/source/: conf.py  index.rst
pymod2pkg/: __init__.py
pymod2pkg/cli/: pymod2pkg.py  reqs2pkg.py
