[metadata]
name = pymod2pkg
summary = python module name to package name map
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/pymod2pkg/
classifier =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    pymod2pkg = pymod2pkg:main

[files]
packages =
    pymod2pkg

[build_sphinx]
all_files = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
