[metadata]
name = pymod2pkg
summary = python module name to package name map
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/pymod2pkg/latest/
python_requires = >=3.6
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[entry_points]
console_scripts =
    pymod2pkg = pymod2pkg.cli.pymod2pkg:main
    reqs2pkg = pymod2pkg.cli.reqs2pkg:main

[files]
packages =
    pymod2pkg
